Update CompatibilityHelper.java